EEVEE lights have a dragable energy value between 0-10 while higher values are useful. #58206

Closed
opened 2018-11-29 22:32:00 +01:00 by Alaska · 5 comments
Member

System Information:
CPU: Ryzen 5 2600
GPU: RX 570 4GB
OS: Windows 10 Home

Blender Version:
Broken: Blender 2.8 Beta 26d5a3625e

Short description of error:
The energy value for lights in EEVEE is limited to a dragable range of 0-10. Quite a lot of the time an energy value greater than this is required and having to manually type it in can sometimes be annoying.

Exact steps for others to reproduce the error:

  1. Open Blender, switch to the 3D viewport and switch to the EEVEE render engine.
  2. Select a light and try and drag the energy value in the properties tab greater than 10. It will not do this unless a higher value has been typed in before and you haven't dragged the value lower than 10.
**System Information:** CPU: Ryzen 5 2600 GPU: RX 570 4GB OS: Windows 10 Home **Blender Version:** Broken: Blender 2.8 Beta 26d5a3625ed **Short description of error:** The energy value for lights in EEVEE is limited to a dragable range of 0-10. Quite a lot of the time an energy value greater than this is required and having to manually type it in can sometimes be annoying. **Exact steps for others to reproduce the error:** 1. Open Blender, switch to the 3D viewport and switch to the EEVEE render engine. 2. Select a light and try and drag the energy value in the properties tab greater than 10. It will not do this unless a higher value has been typed in before and you haven't dragged the value lower than 10.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Alaska changed title from EEVEE lights have an dragable energy value between 0-10 while higher values are useful. to EEVEE lights have a dragable energy value between 0-10 while higher values are useful. 2018-11-30 02:53:29 +01:00

Added subscriber: @brhumphe

Added subscriber: @brhumphe

This is still an issue on c9df453ce7. It stops at powers of 10 multiplied bu 1, 2, and 5:
10
20
50
100
200
500
1,000
2,000
5,000
10,000
20,000
50,000
etc.

This is still an issue on c9df453ce70b. It stops at powers of 10 multiplied bu 1, 2, and 5: 10 20 50 100 200 500 1,000 2,000 5,000 10,000 20,000 50,000 etc.

This issue was referenced by f92b8c2613

This issue was referenced by f92b8c2613355e20f77e0570184544b844b9d759

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58206
No description provided.