Fix T58206: Eevee light energy soft maximum is too low.